<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/producto" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/subtotal"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:text="@string/jab_n_de_manos_x_1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:text="@string/shampoo_monster_x_1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:text="@string/pastas_duria_x_2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_18" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:text="@string/detergente_limpiad_n_x_1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_13_4" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/teal_700"
                android:text="@string/subtotal" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_43_4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/teal_700"
                android:text="@string/costo_env_o" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/teal_700"
                android:text="@string/cup_n" />


            <TextView
                android:id="@+id/textView18"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/teal_700"
                android:text="@string/total" />


            <TextView
                android:id="@+id/textView20"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/_48_4" />
        </TableRow>

    </TableLayout>
</LinearLayout>